Fix build configuration for Railway

--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
-  "name": "aqua-regia-game",
+  "name": "number-wars",
   "version": "1.0.0",
-  "description": "A multiplayer number selection game",
   "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
   "scripts": {
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
-    "start:client": "cd client && npm start",
-    "start:server": "cd server && npm start",
-    "install:all": "npm install && npm run install:client && npm run install:server",
-    "install:client": "cd client && npm install",
-    "install:server": "cd server && npm install",
-    "test": "concurrently \"npm run test:client\" \"npm run test:server\"",
-    "test:client": "cd client && npm test",
-    "test:server": "cd server && npm test"
+    "install:all": "cd client && npm install && cd ../server && npm install",
+    "build": "cd client && npm run build",
+    "start": "cd server && npm start"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.0"
-  },
-  "author": "",
-  "license": "MIT"
+  "engines": {
+    "node": ">=14.0.0"
+  }
 } 
