--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "install:all": "cd client && npm install && cd ../server && npm install",
+    "build": "npm run build:client",
     "build:client": "cd client && npm run build",
     "start:server": "cd server && npm start"
   },
