update package json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "install-all": "npm install && cd client && npm install && cd ../server && npm install",
     "start": "cd server && node index.js",
-    "dev": "cd server && node index.js",
-    "build": "cd client && npm run build"
+    "dev": "cd server && node index.js"
   },
   "engines": {
     "node": ">=18.0.0"
